# ezpadova

./: .gitignore  .gitmodules  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  __init__.py  cmd.py  install.sh  parsec.json  parsec.py  pyproject.toml  setup.py  simpletable.py
.github/workflows/: ci.yml  documentation.yml  ruff.yml  static.yml
doc/: Makefile  conf.py  ezpadova.rst  index.rst  modules.rst  query_parameters.rst
ezpadova/: __init__.py  cmd.py  parsec.json  parsec.py  parsec2.json  parsec2.py  simpletable.py
src/ezpadova/: __init__.py  config.py  deprecated.py  interpolate.py  newparsec.py  parsec.json  parsec.md  parsec.py  test_config.py  test_deprecated.py  test_newparsec.py  test_parsec.py  test_tools.py  tools.py
